cabal-version: 2.4

-- TODO:
--  - Rename wasp-cli back to just wasp.
--  - Manually updating exposed-modules, other-modules and data-files is tedious.
--    Consider using hpack, or maybe even hpack-dhall.

name:           waspc
version:        0.18.0
description:    Please see the README on GitHub at <https://github.com/wasp-lang/wasp/waspc#readme>
homepage:       https://github.com/wasp-lang/wasp/waspc#readme
bug-reports:    https://github.com/wasp-lang/wasp/issues
author:         Wasp Team
-- TODO: update the email once we setup @wasp.sh email.
maintainer:     team@wasp-lang.dev
copyright:      Wasp, Inc.
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  ChangeLog.md
data-files:
  -- NOTE: cabal has this weird rule that * doesn't capture file extension, nor can you provide just *,
  --   it has to be followed by extension, which is why we have to manually list all of the extensions,
  --   and also files with no extension.
  --   Check https://github.com/haskell/cabal/issues/5883 for more details.
  Generator/templates/Dockerfile
  Generator/templates/dockerignore
  Generator/templates/react-app/gitignore
  Generator/templates/react-app/npmrc
  Generator/templates/server/gitignore
  Generator/templates/server/npmrc
  Generator/templates/**/*.prisma
  Generator/templates/**/*.toml
  Generator/templates/**/*.css
  Generator/templates/**/*.ts
  Generator/templates/**/*.json
  Generator/templates/**/*.html
  Generator/templates/**/*.md
  Generator/templates/**/*.js
  Generator/templates/**/*.jsx
  Generator/templates/**/*.tsx
  Generator/templates/**/*.png
  Cli/starters/**/*.js
  Cli/starters/**/*.ts
  Cli/starters/**/*.tsx
  Cli/starters/**/*.css
  Cli/starters/**/*.md
  Cli/starters/**/*.json
  Cli/starters/**/*.svg
  Cli/starters/**/*.prisma
  Cli/starters/**/*.wasp
  Cli/starters/skeleton/.gitignore
  Cli/starters/skeleton/.wasproot
  Cli/starters/skeleton/.waspignore
  Cli/starters/skeleton/public/favicon.ico
  Cli/starters/skeleton/public/.gitkeep
  Cli/starters/basic/.prettierrc
  Cli/starters/basic/.prettierignore
  Lsp/templates/**/*.js
  Lsp/templates/**/*.ts
  Lsp/templates/**/*.jsx
  packages/deploy/dist/**/*.js
  packages/deploy/package.json
  packages/deploy/package-lock.json
  packages/ts-inspect/dist/**/*.js
  packages/ts-inspect/package.json
  packages/ts-inspect/package-lock.json
  packages/prisma/dist/**/*.js
  packages/prisma/package.json
  packages/prisma/package-lock.json
  packages/studio/dist/**/*.js
  packages/studio/dist/**/*.html
  packages/studio/dist/**/*.css
  packages/studio/package.json
  packages/studio/package-lock.json
  packages/wasp-config/dist/**/*.js
  packages/wasp-config/dist/**/*.d.ts
  packages/wasp-config/dist/**/*.map
  packages/wasp-config/package.json
  packages/wasp-config/package-lock.json
data-dir: data/

source-repository head
  type: git
  location: https://github.com/wasp-lang/wasp

common common-all
  default-language: Haskell2010
  ghc-options:
    -Wall
    -- -optP-Wno-nonportable-include-path avoids warning caused by .../autogen/cabal_macros.h. on OSX.
    -optP-Wno-nonportable-include-path
    -- -fwrite-ide-info and -hiedir=.hie tell GHC to write compile-time information about the code
    -- to .hie directory. This information can then be used by other tools, e.g. stan (static analyzer).
    -fwrite-ide-info -hiedir=.hie
  default-extensions:
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    ScopedTypeVariables
    LambdaCase
    FlexibleContexts
    MultiParamTypeClasses
    DisambiguateRecordFields

common common-exe
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

library
  import: common-all
  hs-source-dirs: src
  build-tool-depends:
      alex:alex
  build-depends:
    , base                  >= 4.7 && < 5
    , Glob                  ^>= 0.10.2
    , containers            ^>= 0.6.5
    , directory             ^>= 1.3.6 && < 1.4
    , dir-traverse          ^>= 0.2.3
    , filepath              ^>= 1.4.2
    , time                  ^>= 1.9.3
    , bytestring            ^>= 0.10.12
    , aeson                 ^>= 1.5.6
    , aeson-pretty          ^>= 0.8
    , text                  ^>= 1.2.4
    , template-haskell      ^>= 2.16.0
    , unordered-containers  ^>= 0.2.16
    , mtl                   ^>= 2.2.2
    , async                 ^>= 2.2.4
    , conduit               ^>= 1.3.4
    , exceptions            ^>= 0.10.4
    , split                 ^>= 0.2.3
    , conduit-extra         ^>= 1.3.5
    , process               ^>= 1.6.17
    , cryptohash-sha256     ^>= 0.11.102
    , mustache              ^>= 2.3.2
    , parsec                ^>= 3.1.14
    , path                  ^>= 0.9.2
    , path-io               ^>= 1.6.3
    , pretty-simple         ^>= 4.1.2
    , regex-tdfa            ^>= 1.3.1
    , strong-path           ^>= 1.1.4
    , unliftio              ^>= 0.2.20
    , utf8-string           ^>= 1.0.2
    , cryptonite            ^>= 0.29
    , fsnotify              ^>= 0.3.0
    , http-conduit          ^>= 2.3.8
    , uuid                  ^>= 1.3.15
    -- 'array' is used by code generated by Alex for src/Analyzer/Parser/Lexer.x
    , array                 ^>= 0.5.4
    , deepseq               ^>= 1.4.4
    , extra                 ^>= 1.7.10
    , dotenv                ^>= 0.10.0
    , network               ^>= 3.1.2
    , neat-interpolation    ^>= 0.5.1.3
    , megaparsec            ^>= 9.2.1
  other-modules: Paths_waspc
  exposed-modules:
    FilePath.Extra
    Wasp.AI.CodeAgent
    Wasp.AI.GenerateNewProject
    Wasp.AI.GenerateNewProject.Common
    Wasp.AI.GenerateNewProject.Common.Prompts
    Wasp.AI.GenerateNewProject.Entity
    Wasp.AI.GenerateNewProject.LogMsg
    Wasp.AI.GenerateNewProject.Operation
    Wasp.AI.GenerateNewProject.OperationsJsFile
    Wasp.AI.GenerateNewProject.Page
    Wasp.AI.GenerateNewProject.PageComponentFile
    Wasp.AI.GenerateNewProject.Plan
    Wasp.AI.GenerateNewProject.InitialFiles
    Wasp.AI.GenerateNewProject.WaspFile
    Wasp.AI.GenerateNewProject.PrismaFile
    Wasp.AI.OpenAI
    Wasp.AI.OpenAI.ChatGPT
    Wasp.Analyzer
    Wasp.Analyzer.AnalyzeError
    Wasp.Analyzer.ErrorMessage
    Wasp.Analyzer.Evaluator
    Wasp.Analyzer.Evaluator.Bindings
    Wasp.Analyzer.Evaluator.Evaluation
    Wasp.Analyzer.Evaluator.Evaluation.Combinators
    Wasp.Analyzer.Evaluator.Evaluation.Internal
    Wasp.Analyzer.Evaluator.Evaluation.TypedDictExpr
    Wasp.Analyzer.Evaluator.Evaluation.TypedDictExpr.Combinators
    Wasp.Analyzer.Evaluator.Evaluation.TypedExpr
    Wasp.Analyzer.Evaluator.Evaluation.TypedExpr.Combinators
    Wasp.Analyzer.Evaluator.EvaluationError
    Wasp.Analyzer.Parser
    Wasp.Analyzer.Parser.AST
    Wasp.Analyzer.Parser.AST.PrettyPrinter
    Wasp.Analyzer.Parser.Ctx
    Wasp.Analyzer.Parser.ConcreteParser
    Wasp.Analyzer.Parser.ConcreteParser.ParseError
    Wasp.Analyzer.Parser.CST
    Wasp.Analyzer.Parser.CST.Traverse
    Wasp.Analyzer.Parser.ConcreteParser.ParserLib
    Wasp.Analyzer.Parser.Lexer
    Wasp.Analyzer.Parser.Lexer.Lexer
    Wasp.Analyzer.Parser.Lexer.Internal
    Wasp.Analyzer.Parser.ParseError
    Wasp.Analyzer.Parser.PrettyPrinter
    Wasp.Analyzer.Parser.AbstractParser
    Wasp.Analyzer.Parser.AbstractParser.Monad
    Wasp.Analyzer.Parser.SourceOffset
    Wasp.Analyzer.Parser.SourcePosition
    Wasp.Analyzer.Parser.SourceRegion
    Wasp.Analyzer.Parser.SourceSpan
    Wasp.Analyzer.Parser.Token
    Wasp.Analyzer.Parser.TokenSet
    Wasp.Analyzer.Parser.Valid
    Wasp.Analyzer.StdTypeDefinitions
    Wasp.Analyzer.StdTypeDefinitions.App.Dependency
    Wasp.Analyzer.StdTypeDefinitions.Entity
    Wasp.Analyzer.Type
    Wasp.Analyzer.TypeChecker
    Wasp.Analyzer.TypeChecker.AST
    Wasp.Analyzer.TypeChecker.Internal
    Wasp.Analyzer.TypeChecker.Monad
    Wasp.Analyzer.TypeChecker.TypeError
    Wasp.Analyzer.TypeDefinitions
    Wasp.Analyzer.TypeDefinitions.Class.HasCustomEvaluation
    Wasp.Analyzer.TypeDefinitions.Class.IsDeclType
    Wasp.Analyzer.TypeDefinitions.Class.IsEnumType
    Wasp.Analyzer.TypeDefinitions.Internal
    Wasp.Analyzer.TypeDefinitions.TH
    Wasp.Analyzer.TypeDefinitions.TH.Common
    Wasp.Analyzer.TypeDefinitions.TH.Decl
    Wasp.Analyzer.TypeDefinitions.TH.Enum
    Wasp.Analyzer.Prisma
    Wasp.AppSpec
    Wasp.AppSpec.Action
    Wasp.AppSpec.Api
    Wasp.AppSpec.ApiNamespace
    Wasp.AppSpec.Crud
    Wasp.AppSpec.App
    Wasp.AppSpec.App.Auth
    Wasp.AppSpec.App.Auth.PasswordReset
    Wasp.AppSpec.App.Auth.EmailVerification
    Wasp.AppSpec.App.Client
    Wasp.AppSpec.App.Db
    Wasp.AppSpec.App.EmailSender
    Wasp.AppSpec.App.Server
    Wasp.AppSpec.App.Wasp
    Wasp.AppSpec.App.WebSocket
    Wasp.AppSpec.ConfigFile
    Wasp.AppSpec.Core.Decl
    Wasp.AppSpec.Core.Decl.JSON
    Wasp.AppSpec.Core.Decl.JSON.TH
    Wasp.AppSpec.Core.IsDecl
    Wasp.AppSpec.Core.Ref
    Wasp.AppSpec.Entity
    Wasp.AppSpec.Entity.Field
    Wasp.AppSpec.ExternalFiles
    Wasp.AppSpec.ExtImport
    Wasp.AppSpec.Job
    Wasp.AppSpec.JSON
    Wasp.AppSpec.Operation
    Wasp.AppSpec.Page
    Wasp.AppSpec.Query
    Wasp.AppSpec.Route
    Wasp.AppSpec.Valid
    Wasp.AppSpec.Util
    Wasp.CompileOptions
    Wasp.ConfigFile
    Wasp.Data
    Wasp.Db.Postgres
    Wasp.Error
    Wasp.Env
    Wasp.ExternalConfig.Npm.Dependency
    Wasp.ExternalConfig.Npm.PackageJson
    Wasp.ExternalConfig.TsConfig
    Wasp.Generator
    Wasp.Generator.AuthProviders
    Wasp.Generator.AuthProviders.Common
    Wasp.Generator.AuthProviders.OAuth
    Wasp.Generator.AuthProviders.Local
    Wasp.Generator.AuthProviders.Email
    Wasp.Generator.Crud
    Wasp.Generator.Crud.Routes
    Wasp.Generator.Common
    Wasp.Generator.DepVersions
    Wasp.Generator.TailwindConfigFile
    Wasp.Generator.TailwindConfigFileGenerator
    Wasp.Generator.DbGenerator
    Wasp.Generator.DbGenerator.Auth
    Wasp.Generator.DbGenerator.Common
    Wasp.Generator.DbGenerator.Jobs
    Wasp.Generator.DbGenerator.Operations
    Wasp.Generator.DockerGenerator
    Wasp.Generator.EmailSenders
    Wasp.Generator.ExternalCodeGenerator.Common
    Wasp.Generator.FileDraft
    Wasp.Generator.FileDraft.CopyDirFileDraft
    Wasp.Generator.FileDraft.CopyFileDraft
    Wasp.Generator.FileDraft.TemplateFileDraft
    Wasp.Generator.FileDraft.TextFileDraft
    Wasp.Generator.FileDraft.CopyAndModifyTextFileDraft
    Wasp.Generator.FileDraft.Writeable
    Wasp.Generator.FileDraft.WriteableMonad
    Wasp.Generator.JsImport
    Wasp.Generator.Monad
    Wasp.Generator.NpmDependencies
    Wasp.Generator.NpmInstall
    Wasp.Generator.NpmInstall.Common
    Wasp.Generator.NpmInstall.InstalledNpmDepsLog
    Wasp.Generator.SdkGenerator
    Wasp.Generator.SdkGenerator.Auth.AuthFormsG
    Wasp.Generator.SdkGenerator.Auth.EmailAuthG
    Wasp.Generator.SdkGenerator.Auth.LocalAuthG
    Wasp.Generator.SdkGenerator.Auth.OAuthAuthG
    Wasp.Generator.SdkGenerator.AuthG
    Wasp.Generator.SdkGenerator.Client.AuthG
    Wasp.Generator.SdkGenerator.Client.CrudG
    Wasp.Generator.SdkGenerator.Client.OperationsGenerator
    Wasp.Generator.SdkGenerator.Client.RouterGenerator
    Wasp.Generator.SdkGenerator.Common
    Wasp.Generator.SdkGenerator.CrudG
    Wasp.Generator.SdkGenerator.DepVersions
    Wasp.Generator.SdkGenerator.EmailSender.Providers
    Wasp.Generator.SdkGenerator.EnvValidation
    Wasp.Generator.SdkGenerator.JsImport
    Wasp.Generator.SdkGenerator.Server.AuthG
    Wasp.Generator.SdkGenerator.Server.OAuthG
    Wasp.Generator.SdkGenerator.Server.CrudG
    Wasp.Generator.SdkGenerator.Server.EmailSenderG
    Wasp.Generator.SdkGenerator.Server.JobGenerator
    Wasp.Generator.SdkGenerator.Server.OperationsGenerator
    Wasp.Generator.SdkGenerator.ServerApiG
    Wasp.Generator.SdkGenerator.WebSocketGenerator
    Wasp.Generator.ServerGenerator
    Wasp.Generator.ServerGenerator.JsImport
    Wasp.Generator.ServerGenerator.ApiRoutesG
    Wasp.Generator.ServerGenerator.AuthG
    Wasp.Generator.ServerGenerator.Auth.OAuthAuthG
    Wasp.Generator.ServerGenerator.Auth.LocalAuthG
    Wasp.Generator.ServerGenerator.Auth.EmailAuthG
    Wasp.Generator.ServerGenerator.Common
    Wasp.Generator.ServerGenerator.Db.Seed
    Wasp.Generator.ServerGenerator.DepVersions
    Wasp.Generator.ServerGenerator.JobGenerator
    Wasp.Generator.ServerGenerator.OperationsG
    Wasp.Generator.ServerGenerator.OperationsRoutesG
    Wasp.Generator.ServerGenerator.Setup
    Wasp.Generator.ServerGenerator.Start
    Wasp.Generator.ServerGenerator.WebSocketG
    Wasp.Generator.ServerGenerator.CrudG
    Wasp.Generator.Setup
    Wasp.Generator.Start
    Wasp.Generator.Templates
    Wasp.Generator.Test
    Wasp.Generator.Valid
    Wasp.Generator.Valid.PackageJson
    Wasp.Generator.Valid.TsConfig
    Wasp.Generator.WebAppGenerator
    Wasp.Generator.WebAppGenerator.JsImport
    Wasp.Generator.WebAppGenerator.AuthG
    Wasp.Generator.WebAppGenerator.Auth.Common
    Wasp.Generator.WebAppGenerator.Common
    Wasp.Generator.WebAppGenerator.DepVersions
    Wasp.Generator.WebAppGenerator.RouterGenerator
    Wasp.Generator.WebAppGenerator.Setup
    Wasp.Generator.WebAppGenerator.Start
    Wasp.Generator.WebAppGenerator.Test
    Wasp.Generator.WebAppGenerator.Vite
    Wasp.Generator.WebAppGenerator.Vite.VitePlugin
    Wasp.Generator.WebSocket
    Wasp.Generator.WriteFileDrafts
    Wasp.JsImport
    Wasp.Job
    Wasp.Job.Common
    Wasp.Job.Except
    Wasp.Job.IO
    Wasp.Job.IO.PrefixedWriter
    Wasp.Job.Process
    Wasp.Message
    Wasp.Node.Internal
    Wasp.Node.Version
    Wasp.NodePackageFFI
    Wasp.Project
    Wasp.Project.Analyze
    Wasp.Project.Common
    Wasp.Project.Db
    Wasp.Project.Db.Dev.Postgres
    Wasp.Project.Db.Dev.Sqlite
    Wasp.Project.Db.Migrations
    Wasp.Project.Deployment
    Wasp.Project.Env
    Wasp.Project.ExternalConfig
    Wasp.Project.ExternalConfig.PackageJson
    Wasp.Project.ExternalConfig.TsConfig
    Wasp.Project.ExternalFiles
    Wasp.Project.Studio
    Wasp.Project.Vite
    Wasp.Project.WaspFile
    Wasp.Project.WaspFile.TypeScript
    Wasp.Project.WaspFile.WaspLang
    Wasp.Psl.Ast.Argument
    Wasp.Psl.Ast.Attribute
    Wasp.Psl.Ast.Common
    Wasp.Psl.Ast.Schema
    Wasp.Psl.Ast.Model
    Wasp.Psl.Ast.Enum
    Wasp.Psl.Ast.ConfigBlock
    Wasp.Psl.Ast.Type
    Wasp.Psl.Ast.View
    Wasp.Psl.Ast.WithCtx
    Wasp.Psl.Comments
    Wasp.Psl.Format
    Wasp.Psl.Generator.Argument
    Wasp.Psl.Generator.Attribute
    Wasp.Psl.Generator.Common
    Wasp.Psl.Generator.ConfigBlock
    Wasp.Psl.Generator.Enum
    Wasp.Psl.Generator.Model
    Wasp.Psl.Generator.Schema
    Wasp.Psl.Generator.WithCtx
    Wasp.Psl.Parser.Argument
    Wasp.Psl.Parser.Attribute
    Wasp.Psl.Parser.Common
    Wasp.Psl.Parser.ConfigBlock
    Wasp.Psl.Parser.Enum
    Wasp.Psl.Parser.Model
    Wasp.Psl.Parser.Schema
    Wasp.Psl.Parser.Type
    Wasp.Psl.Parser.View
    Wasp.Psl.Parser.WithCtx
    Wasp.Psl.Util
    Wasp.Psl.Valid
    Wasp.Psl.Db
    Wasp.SemanticVersion
    Wasp.SemanticVersion.VersionBound
    Wasp.SemanticVersion.Version
    Wasp.TypeScript.Inspect.Exports
    Wasp.Util
    Wasp.Util.Aeson
    Wasp.Util.Control.Monad
    Wasp.Util.Debug
    Wasp.Util.Fib
    Wasp.Util.FilePath
    Wasp.Util.HashMap
    Wasp.Util.IO
    Wasp.Util.IO.Retry
    Wasp.Util.Json
    Wasp.Util.Network.HTTP
    Wasp.Util.Network.Socket
    Wasp.Util.StrongPath
    Wasp.Util.Terminal
    Wasp.Util.TH
    Wasp.Util.WebRouterPath
    Wasp.Valid
    Wasp.Version
    Wasp.Project.Waspignore

library waspls
  import: common-all
  hs-source-dirs: waspls/src
  exposed-modules:
    Control.Monad.Log
    Control.Monad.Log.Class
    Wasp.LSP.Analysis
    Wasp.LSP.CodeActions
    Wasp.LSP.Commands
    Wasp.LSP.Commands.Command
    Wasp.LSP.Commands.ScaffoldTsSymbol
    Wasp.LSP.Completion
    Wasp.LSP.Completions.Common
    Wasp.LSP.Completions.DictKeyCompletion
    Wasp.LSP.Completions.ExprCompletion
    Wasp.LSP.Debouncer
    Wasp.LSP.Diagnostic
    Wasp.LSP.DynamicHandlers
    Wasp.LSP.ExtImport.Diagnostic
    Wasp.LSP.ExtImport.ExportsCache
    Wasp.LSP.ExtImport.Path
    Wasp.LSP.ExtImport.Syntax
    Wasp.LSP.GotoDefinition
    Wasp.LSP.Handlers
    Wasp.LSP.Reactor
    Wasp.LSP.Server
    Wasp.LSP.ServerConfig
    Wasp.LSP.ServerMonads
    Wasp.LSP.ServerMonads.HasProjectRootDir
    Wasp.LSP.ServerState
    Wasp.LSP.SignatureHelp
    Wasp.LSP.Syntax
    Wasp.LSP.TypeInference
    Wasp.LSP.Util
    Wasp.LSP.Prisma.Analyze
  build-depends:
      base
    , aeson
    , aeson-pretty
    , deepseq
    , data-default ^>=0.7.1.1
    , hslogger ^>=1.3.1.0
    , lens ^>=5.1
    , lsp ^>=1.4.0.0
    , lsp-types ^>=1.4.0.1
    , stm ^>=2.5.1.0
    , stm-containers ^>=1.2
    , hashable ^>=1.3.5.0
    , unordered-containers
    , strong-path
    , path
    , async ^>=2.2.4
    , mustache ^>=2.3.2
    , unliftio-core
    , mtl
    , text
    , transformers ^>=0.5.6.2
    , utf8-string
    , unordered-containers
    , waspc
    , directory ^>= 1.3.6.0
    , filepath

library cli-lib
  import: common-all
  hs-source-dirs: cli/src
  build-depends:
      directory
    , base
    , filepath
    , time
    , aeson
    , aeson-pretty
    , mtl
    , async
    , exceptions
    , lens ^>=5.1
    , lens-aeson ^>=1.1.3
    , cryptonite
    , fsnotify
    , http-conduit
    , optparse-applicative ^>=0.17.0.0
    , path
    , path-io
    , pretty-simple ^>= 4.1.2.0
    , process
    , strong-path
    , text
    , utf8-string
    , uuid
    , waspc
    , waspls
    , neat-interpolation
    , unliftio ^>= 0.2.20
    , unordered-containers  ^>= 0.2.16
    , bytestring ^>= 0.10.12
    , tar ^>=0.5.1.1
    , zlib ^>=0.6.3.0
    , temporary ^>=1.3
  other-modules:
    Paths_waspc
  exposed-modules:
    Wasp.Cli.Command
    Wasp.Cli.FileSystem
    Wasp.Cli.Archive
    Wasp.Cli.Command.BashCompletion
    Wasp.Cli.Command.Build
    Wasp.Cli.Command.BuildStart
    Wasp.Cli.Command.BuildStart.ArgumentsParser
    Wasp.Cli.Command.BuildStart.Client
    Wasp.Cli.Command.BuildStart.Config
    Wasp.Cli.Command.BuildStart.Server
    Wasp.Cli.Command.Call
    Wasp.Cli.Command.Clean
    Wasp.Cli.Command.Uninstall
    Wasp.Cli.Command.Common
    Wasp.Cli.Command.Compile
    Wasp.Cli.Command.CreateNewProject
    Wasp.Cli.Command.CreateNewProject.AI
    Wasp.Cli.Command.CreateNewProject.ArgumentsParser
    Wasp.Cli.Command.CreateNewProject.Common
    Wasp.Cli.Command.CreateNewProject.ProjectDescription
    Wasp.Cli.Command.CreateNewProject.StarterTemplates
    Wasp.Cli.Command.CreateNewProject.StarterTemplates.GhRepo
    Wasp.Cli.Command.CreateNewProject.StarterTemplates.Local
    Wasp.Cli.Command.CreateNewProject.StarterTemplates.Templating
    Wasp.Cli.Command.Db
    Wasp.Cli.Command.Db.Migrate
    Wasp.Cli.Command.Db.Reset
    Wasp.Cli.Command.Db.Seed
    Wasp.Cli.Command.Db.Studio
    Wasp.Cli.Command.Deps
    Wasp.Cli.Command.Deploy
    Wasp.Cli.Command.Dockerfile
    Wasp.Cli.Command.Info
    Wasp.Cli.Command.Studio
    Wasp.Cli.Command.Require
    Wasp.Cli.Command.Start
    Wasp.Cli.Command.Start.Db
    Wasp.Cli.Command.Telemetry
    Wasp.Cli.Command.Telemetry.Common
    Wasp.Cli.Command.Telemetry.Project
    Wasp.Cli.Command.Telemetry.User
    Wasp.Cli.Command.Test
    Wasp.Cli.Command.TsConfigSetup
    Wasp.Cli.Command.Watch
    Wasp.Cli.Command.WaspLS
    Wasp.Cli.Common
    Wasp.Cli.Terminal
    Wasp.Cli.Command.Message
    Wasp.Cli.Message
    Wasp.Cli.Interactive
    Wasp.Cli.GithubRepo
    Wasp.Cli.Util.EnvVarArgument
    Wasp.Cli.Util.Parser

executable wasp-cli
  import: common-all, common-exe
  hs-source-dirs: cli/exe
  main-is: Main.hs
  build-depends:
      base
    , async
    , waspc
    , cli-lib
    , with-utf8 ^>= 1.0.2
  other-modules:
      Paths_waspc

test-suite waspc-tests
  import: common-all, common-exe
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: TastyDiscoverDriver.hs
  build-tool-depends:
    tasty-discover:tasty-discover
  build-depends:
    , aeson
    , base
    , containers
    , Diff                  ^>= 0.4.1
    , deepseq
    , filepath
    , mtl
    , neat-interpolation
    , parsec
    , megaparsec
    , path
    , split
    , strong-path
    , text
    , unordered-containers
    , bytestring
    , waspc
    , QuickCheck            ^>= 2.14
    , tasty                 ^>= 1.4.2
    -- tasty-hspec 1.1.7 introduces breaking changes, which is why we have < 1.1.7 .
    , tasty-hspec           >= 1.1 && < 1.1.7
    , tasty-quickcheck      ^>= 0.10
    , tasty-golden          ^>= 2.3.5
  other-modules:
    AI.GenerateNewProject.LogMsgTest
    Analyzer.Evaluation.EvaluationErrorTest
    Analyzer.EvaluatorTest
    Analyzer.Parser.ConcreteParserTest
    Analyzer.Parser.CST.TraverseTest
    Analyzer.Parser.ParseErrorTest
    Analyzer.Parser.SourcePositionTest
    Analyzer.Parser.SourceSpanTest
    Analyzer.ParserTest
    Analyzer.TestUtil
    Analyzer.TypeChecker.InternalTest
    Analyzer.TypeCheckerTest
    Analyzer.ValidTest
    AnalyzerTest
    AppSpec.ValidTest
    AppSpec.FromJSONTest
    AppSpec.EntityTest
    EnvTest
    ErrorTest
    FilePath.ExtraTest
    Fixtures
    Generator.AuthInjectionTest
    Generator.DbGeneratorTest
    Generator.FileDraft.CopyFileDraftTest
    Generator.FileDraft.CopyAndModifyTextFileDraftTest
    Generator.FileDraft.TemplateFileDraftTest
    Generator.MockWriteableMonad
    Generator.WebAppGeneratorTest
    Generator.WriteFileDraftsTest
    Generator.JsImportTest
    Generator.CrudTest
    Generator.CommonTest
    Node.InternalTest
    Psl.Common.ModelTest
    Psl.Generator.ModelTest
    Psl.Generator.SchemaTest
    Psl.Generator.WithCtxTest
    Psl.Parser.ArgumentTest
    Psl.Parser.AttributeTest
    Psl.Parser.ConfigBlockTest
    Psl.Parser.EnumTest
    Psl.Parser.ModelTest
    Psl.Parser.TypeTest
    Psl.Parser.ViewTest
    Psl.Parser.SchemaTest
    Psl.Parser.WithCtxTest
    Psl.ValidTest
    Test.Util
    Util.FibTest
    Util.Control.MonadTest
    UtilTest
    Util.Diff
    Util.FilePathTest
    Util.IO.RetryTest
    Util.Prisma
    SemanticVersionTest
    SemanticVersion.VersionBoundTest
    SemanticVersion.VersionTest
    Project.WaspignoreTest
    Project.DbTest
    Paths_waspc
    Generator.NpmDependenciesTest
    JsImportTest

test-suite waspls-tests
  import: common-all, common-exe
  type: exitcode-stdio-1.0
  hs-source-dirs: waspls/tests
  main-is: TastyDiscoverDriver.hs
  build-tool-depends:
    tasty-discover:tasty-discover
  build-depends:
    , base
    , waspc
    , waspls
    , lens                  ^>=5.1
    , lsp                   ^>=1.4.0.0
    , lsp-types             ^>=1.4.0.1
    , mtl
    , QuickCheck            ^>= 2.14
    , tasty                 ^>= 1.4.2
    -- tasty-hspec 1.1.7 introduces breaking changes, which is why we have < 1.1.7 .
    , tasty-hspec           >= 1.1 && < 1.1.7
    , tasty-golden          ^>= 2.3.5
    , bytestring
    , filepath
  other-modules:
    Wasp.LSP.CompletionTest
    Wasp.LSP.DebouncerTest
    Wasp.LSP.SyntaxTest

test-suite wasp-cli-tests
  import: common-all, common-exe
  type: exitcode-stdio-1.0
  hs-source-dirs: cli/tests
  main-is: TastyDiscoverDriver.hs
  build-tool-depends:
    tasty-discover:tasty-discover
  build-depends:
    , base
    , waspc
    , cli-lib
    , QuickCheck            ^>= 2.14
    , tasty                 ^>= 1.4.2
    -- tasty-hspec 1.1.7 introduces breaking changes, which is why we have < 1.1.7 .
    , tasty-hspec           >= 1.1 && < 1.1.7
    , tasty-quickcheck      ^>= 0.10
  other-modules:
    DbMigrateTest
    TerminalTest
    Paths_waspc
    Wasp.Cli.Command.Telemetry.ProjectTest
    Wasp.Cli.Util.EnvVarArgumentTest

test-suite waspc-e2e-tests
  import: common-all, common-exe
  type: exitcode-stdio-1.0
  hs-source-dirs: e2e-tests
  main-is: Main.hs
  build-tool-depends: waspc:wasp-cli
  build-depends:
    , waspc
    , aeson
    , directory
    , base
    , filepath
    , strong-path
    , text
    , mtl
    , bytestring
    , dir-traverse
    , aeson-pretty
    , process
    , tasty                 ^>= 1.4.2
    -- tasty-hspec 1.1.7 introduces breaking changes, which is why we have < 1.1.7 .
    , tasty-hspec           >= 1.1 && < 1.1.7
    , tasty-golden          ^>= 2.3.5
  other-modules:
    Common
    GoldenTest
    ShellCommands
    Util
    Tests.WaspBuildTest
    Tests.WaspCompileTest
    Tests.WaspJobTest
    Tests.WaspMigrateTest
    Tests.WaspNewTest
    Tests.WaspComplexTest
